Fix a tags overlaying each over on small screens

--- a/Третий курс/Первый семестр/Базы данных/Database/php/style.css
+++ b/Третий курс/Первый семестр/Базы данных/Database/php/style.css
@@ -32,6 +32,9 @@ a {
 }
 
 .buttons {
+    -webkit-appearance: button;
+    -moz-appearance: button;
+    text-decoration: none;
     color: inherit;
     transition: color 0.5s linear;
     margin: 2px;
